--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,3 +28,7 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run build
+    - name: Upload
+      uses: actions/upload-artifact@v3.1.3
+      with:
+        path: ./dist/
